--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,16 +2,15 @@
 
 /* Couleurs du thème */
 $theme-colors: (
-  "blue": #203157,
-  "light-blue": #364668,
+  "dark-blue": #1B019B,
+  "light-blue": #244FD8,
+  "blue": #91C7E2,
   "dark-orange": #CF5A2E,
-  "grey": #d8d8d8,
-  "light-grey": #F3F3F3,
-  "dark-grey": #5E5E5E,
+  "grey": #FFFAF5,
+  "dark": #5E5E5E,
   "white": #FFFFFF,
-  "gold": #D1AF5F,
-  "orange": #CF5A2E,
-  "light-orange": #f88a63,
+  "red": #A12201,
+  "orange": #EB420A,
 );
 
 /* Tailles des bordures */
