--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,154 +1,100 @@
-<div class="full-screen-container mt-5">
+<div class="full-screen-container">
   <div class="homepage-wrapper">
-
-    <!-- ========= SECTION 1 ========= -->
     <section id="first-section" class="first-section" #firstSection>
       <div class="container">
         <div class="row justify-content-center">
-          <div class="slogan-container col-auto d-flex flex-column align-items-center mt-2 mt-md-5">
+          <div
+            class="slogan-container col-auto d-flex flex-column align-items-center"
+          >
+            <!-- PRESENTATION -->
+            <div class="presentation">
 
-            <div class="presentation d-flex align-items-center">
-              <div class="col-12 col-md-6 text-center px-md-5 px-0">
-                <img #logo
-                     src="/assets/img/homepage/logo-ss-fd-cb2p.webp"
-                     alt="CB2P Avocats"
-                     class="logo px-md-5" />
-              </div>
+              <!-- LOGO + TEXTE VERTICAL -->
+              <div class="logo-wrapper">
+                <div class="logo-grid" #logoGrid>
 
-              <div #separator class="separator"></div>
+                  <!-- Groupe GAUCHE : 1 (haut-g.)  + 4 (bas-d.) -->
+                  <div
+                    class="logo-group"
+                    (mouseenter)="hoverGroup('gauche')"
+                    (mouseleave)="unhoverGroup()"
+                    (click)="openCarousel('gauche')"
+                  >
+                    <!-- HAUT-GAUCHE -->
+                    <img src="/assets/img/homepage/symbole-1.webp"
+                         class="logo-piece top-left"
+                         alt="Symbole 1"
+                         [class.hovered]="hoveredGroup==='gauche'" />
 
-              <div class="col-12 col-md-6 text-center px-md-4 px-0">
-                <div class="text-box-wrapper">
-                  <h1 #words class="office-skill d-flex flex-column align-items-center text-center px-md-0 pb-md-0 px-3 pb-4">
-                    <span>AVOCATS</span>
-                    <span>CONTENTIEUX</span>
-                    <span>CONSEILS</span>
-                    <span>À BORDEAUX</span>
-                  </h1>
-                </div>
-              </div>
-            </div>
-
-            <!-- Slogan éventuel -->
-            <div class="row slogan my-5 w-120">
-              <div class="slogan-box col text-center mb-5 px-5"></div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- ========= SECTION 4 ========= -->
-    <section id="fourth-section" class="fourth-section" #section4>
-      <div class="container">
-        <div class="row justify-content-center text-center">
-
-          <div class="col-md-4 col-12 text-container">
-            <div class="line mb-4" #line4a></div>
-            <div class="title-expert">
-              <h5 #title4a>{{ officeData?.title_4 }}</h5>
-              <p  #subtitle4a>{{ officeData?.subtitle_4 }}</p>
-            </div>
-          </div>
-
-          <div class="col-md-4 col-12 text-container">
-            <div class="line mb-4" #line4b></div>
-            <div class="title-expert">
-              <h5 #title4b>{{ officeData?.title_5 }}</h5>
-              <p  #subtitle4b>{{ officeData?.subtitle_5 }}</p>
-            </div>
-          </div>
-
-          <div class="col-md-4 col-12 text-container">
-            <div class="line mb-4" #line4c></div>
-            <div class="title-expert">
-              <h5 #title4c>{{ officeData?.title_6 }}</h5>
-              <p  #subtitle4c>{{ officeData?.subtitle_6 }}</p>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </section>
-
-    <!-- ========= SECTION 2 ========= -->
-    <section id="second-section" class="second-section">
-      <div class="container">
-        <div class="row my-md-5 px-md-5 justify-content-center">
-          <div class="col title-skills text-center">
-            <h2 #title2>{{ homepageData?.title_2 }}</h2>
-          </div>
-        </div>
-
-        <div class="row justify-content-center align-items-center"
-             style="cursor: pointer;" (click)="goToSkills()">
-          <div class="skills col-auto d-flex align-items-center mt-3 mt-md-0">
-            <p class="mb-0" #subtitle2>{{ homepageData?.subtitle_1 }}</p>
-            <div class="indicator-arrow-down ms-2" #arrowRight>
-              <img src="assets/icons/arrow_right.webp" alt="arrow right" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- ========= SECTION 3 ========= -->
-    <section id="third-section" class="third-section" #thirdSection>
-      <div class="container">
-        <div class="team row my-0 px-0 my-md-5 px-md-5 justify-content-center">
-          <div class="col title-skills text-left">
-            <h3 #title3>{{ homepageData?.title_3 }}</h3>
-          </div>
-        </div>
-
-        <div class="row gy-4">
-          <ng-container *ngFor="let lawyer of lawyersList">
-            <div class="col-12 col-sm-6 col-md-4 px-2 px-md-3">
-              <div class="image-container">
-                <img #portrait class="img-fluid"
-                     [src]="lawyer.photo"
-                     [alt]="lawyer.name" />
-
-                <div class="hover-overlay">
-                  <div class="hover-text">
-                    <p>{{ lawyer.name }}</p>
-                    <p><small>{{ lawyer.function }}</small></p>
+                    <!-- BAS-DROITE -->
+                    <img src="/assets/img/homepage/symbole-3.webp"
+                         class="logo-piece bottom-right"
+                         alt="Symbole 4"
+                         [class.hovered]="hoveredGroup==='gauche'" />
                   </div>
-                </div>
-              </div>
-            </div>
-          </ng-container>
-        </div>
+                  <div
+                    class="logo-group"
+                    (mouseenter)="hoverGroup('droite')"
+                    (mouseleave)="unhoverGroup()"
+                    (click)="openCarousel('droite')"
+                  >
+                    <!-- HAUT-DROITE -->
+                    <img src="/assets/img/homepage/symbole-2.webp"
+                         class="logo-piece top-right"
+                         alt="Symbole 2"
+                         [class.hovered]="hoveredGroup==='droite'" />
 
-        <div class="team row justify-content-center align-items-center mt-5"
-             style="cursor: pointer;" (click)="goToTeam()">
-          <div class="col-auto d-flex align-items-center" #teamCallToAction>
-            <p class="mb-0">{{ homepageData?.subtitle_2 }}</p>
-            <div class="indicator-arrow-down ms-2">
-              <img src="assets/icons/arrow-right-white.webp" alt="arrow right" />
+                    <!-- BAS-GAUCHE -->
+                    <img src="/assets/img/homepage/symbole-4.webp"
+                         class="logo-piece bottom-left"
+                         alt="Symbole 3"
+                         [class.hovered]="hoveredGroup==='droite'" />
+                  </div>
+
+                </div>
+
+                <!-- Texte vertical -->
+                <h1 class="vertical-title d-none d-md-block">Architecte&nbsp;HMONP</h1>
+              </div>
+
+
+              <!-- TITRE HORIZONTAL -->
+              <h1 class="site-title" #titlesBlock>Artiste muraliste</h1>
+
+              <!-- ANNONCE -->
+              <p class="site-announcement" #announcement>
+                Site en cours de construction
+              </p>
+
+              <!-- ICÔNES SOCIALES -->
+              <div class="social-icons" #socialIcons>
+                <a
+                  href="https://wa.me/ton-numero"
+                  target="_blank"
+                  class="icon-link"
+                >
+                  <img src="/assets/icons/appel.png" alt="WhatsApp" />
+                </a>
+                <a
+                  href="mailto:tonemail@example.com"
+                  target="_blank"
+                  class="icon-link"
+                >
+                  <img src="/assets/icons/mail.png" alt="Mail" />
+                </a>
+                <a
+                  href="https://instagram.com/toncompte"
+                  target="_blank"
+                  class="icon-link"
+                >
+                  <img src="/assets/icons/instagram.png" alt="Instagram" />
+                </a>
+              </div>
+
             </div>
           </div>
         </div>
       </div>
     </section>
-
-    <!-- ========= SECTION 6 ========= -->
-    <section id="sixth-section" class="sixth-section" #section6>
-      <div class="container mb-5">
-        <div class="row justify-content-center">
-          <div class="col-auto d-flex flex-column align-items-center">
-            <div class="hero-section d-flex flex-column align-items-center p-5">
-              <div class="row slogan my-5 w-100">
-                <div class="col text-center mb-5">
-                  <h4 #title6>{{ officeData?.title_8 }}</h4>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
   </div>
 </div>
